<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_agakpputih"
    tools:context=".adminactivity.tambahPasanganActivity">

    <RelativeLayout
        android:id="@+id/topnavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/shape_radius_bottom_ungu">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pasangan Baru"
            android:textColor="@color/backgroud_putih"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/backicon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/arrow_back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/backicon"
            android:layout_marginStart="8dp"
            android:text="@string/kembali"
            android:textColor="@color/backgroud_putih"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/topnavbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_marginTop="18dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/shape_top_radius_white">
                <ImageView
                    android:id="@+id/iconnama"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/user_graduate"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconnama">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Calon ketua"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nama_ketua"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="1dp"
                android:background="@color/backgroud_putih">
                <ImageView
                    android:id="@+id/iconkelas"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/user_graduate"/>
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconkelas">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Calon wakil"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nama_wakil"/>

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="1dp"
                android:background="@color/backgroud_putih">
                <ImageView
                    android:id="@+id/iconnomor"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/map_marker"/>
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconnomor">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nomor Urut"/>
                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/nomor_urut"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="1"/>
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="1dp"
                android:background="@color/backgroud_putih">
                <ImageView
                    android:id="@+id/iconvisi"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/hashtag"/>
                <LinearLayout
                    android:layout_marginVertical="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconvisi">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visi"/>

                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/visi_kandidat"
                        android:inputType="text|textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="visi pasangan"/>

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:translationZ="2dp"
                android:outlineProvider="paddedBounds"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/shape_bottom_radius_white">
                <ImageView
                    android:id="@+id/iconmisi"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/location_arrow"/>
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconmisi">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/misi_title"/>

                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/misi_kandidat"
                        android:inputType="text|textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Misi Pasangan"/>

                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/button_batal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/batal"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:paddingStart="24dp"
                    android:paddingEnd="0dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/button_simpanp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_radius_green"
                    android:text="@string/tambah_button"
                    android:textSize="16sp"
                    android:textColor="@color/backgroud_putih"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>