<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_agakpputih"
    tools:context=".adminactivity.EditKandidatActivity">

    <RelativeLayout
        android:id="@+id/topnavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingVertical="16dp"
        android:paddingHorizontal="8dp"
        android:background="@drawable/shape_radius_bottom_ungu">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kandidat 1"
            android:textColor="@color/backgroud_putih"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/backicon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/arrow_back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/backicon"
            android:layout_marginStart="8dp"
            android:text="kembali"
            android:textColor="@color/backgroud_putih"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <ScrollView
        android:layout_below="@id/topnavbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_marginTop="18dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/shape_top_radius_white">
                <ImageView
                    android:id="@+id/iconnama"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/user_graduate"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconnama">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama"/>
                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/nama_kandidat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/nama"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="1dp"
                android:background="@color/backgroud_putih">
                <ImageView
                    android:id="@+id/iconkelas"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/material_class"/>
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconkelas">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kelas"/>
                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/kelas_kandidat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/example_kelas"/>

                </LinearLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="1dp"
                android:background="@color/backgroud_putih">
                <ImageView
                    android:id="@+id/iconnisn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/user_graduate"/>
                <LinearLayout
                    android:layout_marginVertical="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_toRightOf="@id/iconnisn">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NISN"/>
                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/nisn_kandidat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="76825765276"/>

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="1dp"
                android:background="@color/backgroud_putih">
                <ImageView
                    android:id="@+id/iconfoto"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/file_image"/>
                <LinearLayout
                    android:layout_marginVertical="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconfoto">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Foto"/>
                    <TextView
                        android:textSize="14sp"
                        android:id="@+id/foto_kandidat"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Pilih foto"/>

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:translationZ="2dp"
                android:outlineProvider="paddedBounds"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/shape_bottom_radius_white">
                <ImageView
                    android:id="@+id/iconpengalaman"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:tint="#3E4553"
                    android:src="@drawable/ic_pengalaman"/>
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/iconpengalaman">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pengalaman"/>

                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/pengalaman_kandidat"
                        android:inputType="text|textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Pengalaman kandidat"/>

                </LinearLayout>


            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/button_batal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/batal"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:paddingStart="24dp"
                    android:paddingEnd="0dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/button_simpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_radius_green"
                    android:text="Simpan"
                    android:textSize="16sp"
                    android:textColor="@color/backgroud_putih"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>